diesel_compile_tests/tests/fail/derive/embed_and_serialize_as_cannot_be_mixed.stderr
error: `#[diesel(embed)]` cannot be combined with `#[diesel(serialize_as)]`
  --> $DIR/embed_and_serialize_as_cannot_be_mixed.rs:22:36
   |
22 |     #[diesel(embed, serialize_as = SomeType)]
   |                                    ^^^^^^^^
